Fix global progress display for updates

BUG: 400891